# remove-bg

./: pyproject.toml  removeBG.py  requirements.txt
.devcontainer/: devcontainer.json
.streamlit/: config.toml
removebg/: removeBG.py
